# Second-thought

./: .gitignore  AGENTS.md  CAPSULE_DIRECTIONAL_MORPH_PLAN.md  CLAUDE.md  GUIDE.html  README.md  SKILLS.md  compact-modes-mock.html  for_sonnet.md  launch-dev.vbs  launch.ps1  launch.vbs  minimal-slide-out.md  pill-routing-fix-plan.md  ponytail-audit.md
.github/workflows/: ci.yml
browser_extension/: background.js  loopback.js  manifest.json  popup.html  popup.js
docs/: ARCHITECTURE.md  DESIGN_MANIFESTO.md  USER_GUIDE.md  tutorial.html
docs/archive/: capsule-polish-mock.html  design-manifesto.html  fullwindow-redesign-design.md  p1-3-motion-mock.html  p1-4-hit-target-mock.html  ponytail-audit.md
docs/superpowers/plans/: 2026-06-28-look-search-fts-fix.md  2026-06-30-capsule-dashboard-polish.md  2026-06-30-fullwindow-polish.md
graphify-out/: .graphify_detect.json  .graphify_detect_new.json  .graphify_root  .graphify_semantic_marker  GRAPH_REPORT.md  graph.html  graph.json
graphify-out/2026-06-17/: .graphify_analysis.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/cache/: stat-index.json
gui/: THEMES.md  index.html  package-lock.json  package.json  tailwind.config.js
gui/mockups/: _theme.css  capsule-hover-rounded.html  capsule-hover-slide.html  capsule-redesign.html  capsule-width-deadzone.html  hover-recipe-2.html  hover-recipe.html  pill-drag-close-race.html  radial-unified.html  theme-tuner.html
gui/src/: App.tsx  index.css  main.tsx
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/.cargo/: audit.toml
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: lib.rs  main.rs
gui/src/components/: CaptureOverlay.tsx  CommandPalette.tsx  DailyDigest.tsx  DeletePromptModal.tsx  ErrorBoundary.tsx  InboxPanel.tsx  LookPanel.tsx  NoteEditor.tsx  PairingPanel.tsx  PillOverlay.tsx  SearchModal.tsx  SettingsPanel.tsx  StatsPanel.tsx  StatusIndicator.tsx  StepIndicator.tsx  ThemeCustomEditor.tsx  Toast.tsx  ToastHost.tsx  VaultManager.tsx
gui/src/components/CompactPanels/: CompactHistory.tsx  CompactInbox.tsx  CompactLook.tsx  CompactSettings.tsx  CompactShell.tsx  CompactVault.tsx
gui/src/components/FullWindow/: DashboardView.tsx  FullWindow.tsx  LibraryView.tsx  TagsView.test.ts  TagsView.tsx  TrashView.tsx
gui/src/components/Onboarding/: VaultSetup.tsx
gui/src/components/PillMenu/: CapsuleMenu.tsx  DevTuner.tsx  FluidVisualizer.tsx  RadialMenu.tsx  capsuleSlider.test.ts  capsuleSlider.ts  icons.tsx  pillDims.test.ts
gui/src/components/Sync/: SyncDashboard.test.ts  SyncDashboard.tsx  SyncPanel.tsx  SyncWizard.tsx  parts.tsx
gui/src/components/ui/: SegmentedToggle.tsx  Tabs.tsx  Toggle.tsx  styles.ts
gui/src/hooks/: useCapture.test.ts  useCapture.ts  useLlmStatus.ts  useLookChat.test.ts  useLookChat.ts  useToasts.ts  useVoiceRecording.ts
gui/src/lib/: api.ts  attachments.test.ts  attachments.ts  capsulePillLabels.test.ts  captureRetry.test.ts  captureRetry.ts  citations.test.ts  citations.ts  compactPanel.test.ts  compactPanel.ts  config.ts  deletePromptQueue.test.ts  deletePromptQueue.ts  devTuning.ts  dragMath.test.ts  dragMath.ts  fanLayout.test.ts  fanLayout.ts  fileIngest.test.ts  fileIngest.ts  fluidviz.test.ts  fluidviz.ts  geoLog.test.ts  geoLog.ts  historyOrder.test.ts  historyOrder.ts  hotkey.test.ts  hotkey.ts  jsonGuard.test.ts  jsonGuard.ts  lineDiff.test.ts  lineDiff.ts  llmStatusLabel.test.ts  llmStatusLabel.ts  logger.test.ts  logger.ts  lookChatCommands.test.ts  lookChatCommands.ts  lookChatDefaults.ts  menuGeometry.test.ts  (+59 more)
omni_capture/: __init__.py  atomic_io.py  capture_log.py  config.py  config.toml  config.toml.example  conflict_resolver.py  daily_digest.py  dashboard.html  dedup.py  delete_detect.py  drive_auth.py  enrichment_router.py  frontmatter.py  index_health.py  index_writer.py  interceptor.py  jobs.py  lan_crypto.py  lan_discovery.py  lan_server.py  lan_sync.py  link_resolver.py  llm_engine.py  look_log.py  main.py  merge.py  mobile_sync_agent.py  models.py  note_editor.py  note_hash.py  note_history.py  note_model.py  notifier.py  path_safety.py  pre_resolver.py  provisional_store.py  rag_engine.py  reconcile.py  reminders.py  (+89 more)
omni_capture/tests/: test_e2e.py
