[package]
name = "second-thought"
version = "0.1.0"
edition = "2021"
description = "Second Thought — Omni-Capture GUI"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Required by Tauri v2: lib.rs is compiled as a separate crate so mobile targets can link it.
[lib]
name = "second_thought_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3", features = [] }

[dependencies]
tauri               = { version = "2.3", features = ["tray-icon"] }
tauri-plugin-global-shortcut  = "2.3"
tauri-plugin-shell            = "2.3"
tauri-plugin-opener           = "2"
tauri-plugin-clipboard-manager = "2.3"
tauri-plugin-dialog           = "2.3"
tauri-plugin-fs               = "2.3"
tauri-plugin-single-instance  = "2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
rand        = "0.8"
chrono      = { version = "0.4", default-features = false, features = ["clock"] }

[target.'cfg(windows)'.dependencies]
# Raw Win32 FFI for WS_EX_NOACTIVATE + a low-level mouse hook (click-away
# detection for a non-activating window) and a Job Object that reaps the
# Python child if the parent dies ungracefully — no stdlib/Tauri API exposes
# any of these, so this is a justified dependency, not a hand-roll-vs-crate
# tradeoff.
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    # JobObjects: the extended-limit struct is gated behind Win32_System_Threading
    # and CreateJobObjectW (takes a SECURITY_ATTRIBUTES*) behind Win32_Security.
    # Neither is OpenProcess — we get the child HANDLE from Child::as_raw_handle().
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Security",
] }

[features]
# This feature is used for production builds or when `devtools` feature is not enabled.
custom-protocol = ["tauri/custom-protocol"]
